--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
 }
 
 h1 {
+    color: white;
     background-color: brown;
     width: 6cm;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -11,3 +12,4 @@ h1 {
 p {
     font-weight: bold;
 }
+
