--- a/recipes/backcrepes.css
+++ b/recipes/backcrepes.css
@@ -3,6 +3,20 @@ body {
 }
 
 img {
+    float: left;
     height: 15cm;
     width: auto;
+}
+
+#desc {
+    font-weight: bolder;
+}
+
+#ingredients {
+    font-weight: bold;
+}
+
+ul {
+    width:20cm;
+    background-color: mistyrose;
 }
