--- a/recipes/backtoast.css
+++ b/recipes/backtoast.css
@@ -19,3 +19,12 @@ ul {
     width: 20cm;
     background-color: mistyrose;
 }
+
+#steps {
+    font-weight: bold;
+}
+
+ol {
+    width: 45cm;
+    background-color: mistyrose;
+}
